test/Fail/Issue1718.err
Issue1718.agda:5.17-33: error: [NotAValidLetBinding]
Not a valid let binding
when scope checking the declaration
  module Sub (let open import oops) where
